# Machine-Learning-Engineering-Project-Template

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/adapters/: mlflow.py  pandas.py
api/core/: domain.py
api/test/integration/: test_mlflow.py
metrics/: Dockerfile  pyproject.toml
mlflow/: Dockerfile  pyproject.toml
resources/: prometheus.yaml
resources/broker/: kafka.Dockerfile  registry.yaml  schema-registry.Dockerfile  server.properties
resources/grafana/dashboards/: dashboard.json
train/: Dockerfile  pyproject.toml
