[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Fernando Freire Scattone <fernando.scattone@alumni.usp.br>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.0.1"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
mypy = "^0.942"
jedi = "^0.18.1"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
types-redis = "^4.3.21.1"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.ruff]
line-length=89
select = [
    "E", # pycodestyle
    # https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "F", # Pyflakes
    # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "W", # Warnings
    # https://beta.ruff.rs/docs/rules/#warning-w
    "I", # isort
    # https://beta.ruff.rs/docs/rules/#isort-i
    "C", # Complexity (mccabe+) & comprehensions
    # https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    # https://beta.ruff.rs/docs/rules/#mccabe-c90
    "SIM", # flake8-simplify
    # https://beta.ruff.rs/docs/rules/#flake8-simplify-sim
    "B" # flake8-bugbear
    # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
]

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header"]

[tool.ruff.isort]
known-first-party=["product-recommendation-api"]

[tool.mypy]
ignore_missing_imports = true