[tool.poetry]
name = "mlflow_server"
version = "0.1.0"
description = ""
authors = ["Fernando Freire Scattone <fernando.scattone@alumni.usp.br>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.151"
mlflow = "^2.0.1"
PyMySQL = "^1.0"
cryptography = "^37.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"